<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_group_notif">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_notif"
            android:title="@string/pref_title_notif" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="@string/pref_title_notif"
            android:key="@string/pref_title_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="@string/pref_title_notif"
            android:key="@string/pref_title_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_group_others">
        <Preference
            android:summary="dewisesuko15@gmail.com"
            android:title="Email" />
        <Preference
            android:summary="Dewi Sesuko (A11.2015.09089)"
            android:title="Pembuat" />
        <Preference
            android:summary="@string/app_version"
            android:title="@string/pref_title_build" />
    </PreferenceCategory>

</PreferenceScreen>
